--- a/test.html
+++ b/test.html
@@ -7,11 +7,11 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="public/css/style.css">
    <title>Document</title>
 </head>
 <body>
-  <div class="container text-center">
+  <div class="container text-center justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="mtn">⛰️</span>
@@ -21,16 +21,16 @@
         <!-- Conditionally render login or logout links -->
         <!-- {{#if logged_in}} -->
         <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <!-- <button class="no-button" id="logout">logout</button> -->
         <!-- {{else}} -->
         <a href="/login">login</a>
         <!-- {{/if}} -->
       </nav>
     </header>
-    <main class="container container-fluid mt-5">
+    <main class="container text-center container-fluid mt-5">
       <!-- Render the sub layout -->
       <div class="row mb-4 project">
-        <div class="col-md-5">
+        <div class="col-md">
           <h2>
             <!-- Call helper function with triple brackets to render the emoji span as HTML -->
             <!-- {{{render_shape}}} -->
