html files and css for front end

--- a/profile-login.html
+++ b/profile-login.html
@@ -43,37 +43,40 @@
     </header>
     <main>
       <!-- This is where we would like the items that get created to go -->
-      <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Attainable Goals</a>
+      <form>
+        <a class="atag" id="formFont">Log In</a>
+        <div class="row mb-3">
+          <label id="formFont" for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3">
+          </div>
         </div>
-      </div>
-
-      <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Attainable Goals</a>
+        <div class="row mb-3">
+          <label id="formFont" for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3">
+          </div>
         </div>
-      </div>
-      
-      <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Attainable Goals</a>
+        <button id="buttonFont" type="submit" style="background-color: #e3f2fd;" class="btn btn-primary">Sign in</button>
+      </form>
+      <form>
+        <a class="atag" id="formFont">Sign Up</a>
+        <div class="row mb-3">
+          <label id="formFont" for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3">
+          </div>
         </div>
-      </div>
+        <div class="row mb-3">
+          <label id="formFont" for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3">
+          </div>
+        </div>
+        <button id="buttonFont" type="submit" style="background-color: #e3f2fd;" class="btn btn-primary">Sign in</button>
+      </form>
     </main>
     <footer>
-      <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn" style="background-color: #e3f2fd;" type="button">+</button>
-      </div>
     </footer>
   </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
